--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
 </head>
 
 <body>
-    <div class="banner-box wrapper">
+    <div class="banner-box banner-box--top wrapper">
         <div class="banner-box__logo">
-            <span class="banner-box__caption">DEMOCRACY</span>
-            <span class="banner-box__caption">REPORTING</span>
-            <span class="banner-box__caption">INTERNATIONAL</span>
+            <img src="img/dri_logo.svg" alt="" />
         </div>
         <h1>LIBYA SOCIAL MEDIA MONITORING REPORT</h1>
         <p>December 2018 – January 2019</p>
